--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.ico" />
 
     <meta property="og:title" content="CA Plombier Genève - Dépannage 24/7 | Plomberie & Sanitaire" />
     <meta property="og:description" content="Services de plomberie professionnels 24h/24 et 7j/7 à Genève. Installation, dépannage, débouchage." />
